--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 clap = {version ="4.5.4", features = ["derive"]}
-png = "0.17.13"
+image = "0.25.1"
 rand = "0.8.5"
