--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {version ="4.5.4", features = ["derive"]}
+serde = { version = "1.0.203", features = ["derive"] }
+clap = { version = "4.5.4", features = ["derive"] }
 image = "0.25.1"
 rand = "0.8.5"
+thiserror = "1.0.61"
+serde_json = "1.0.117"
